# kmk-rp2040-corne

./: boot_out.txt  code-right.py  code.py  readme.md
requirements/AT24MAC_EEPROM/: pyproject.toml
requirements/absolute_mouse/: pyproject.toml  requirements.txt
requirements/arrowline/: pyproject.toml
requirements/async_buzzer/: pyproject.toml
requirements/axp2101/: pyproject.toml  requirements.txt
requirements/ble_cycling_power_service/: pyproject.toml  requirements.txt
requirements/bma220/: pyproject.toml
requirements/bma400/: pyproject.toml
requirements/bmp581/: pyproject.toml
requirements/candlesticks/: pyproject.toml
requirements/cedargrove_ad5245/: pyproject.toml
requirements/cedargrove_ad5293/: pyproject.toml  requirements.txt
requirements/cedargrove_chime/: pyproject.toml
requirements/cedargrove_drv8830/: pyproject.toml
requirements/cedargrove_dst_adjuster/: pyproject.toml
requirements/cedargrove_leapyear/: pyproject.toml
requirements/cedargrove_ohmslaw/: pyproject.toml
requirements/cedargrove_paletteslice/: pyproject.toml
requirements/cedargrove_rgb_spectrumtools/: pyproject.toml
requirements/cedargrove_touchcalibrator/: pyproject.toml
requirements/circuitpython_nrf24l01/: requirements.txt
requirements/circuitpython_simple_dial/: pyproject.toml
requirements/color_picker/: pyproject.toml
requirements/creativecontrol_circuitpython_ltc166x/: pyproject.toml
requirements/display_ht16k33/: pyproject.toml
requirements/gauge/: pyproject.toml
requirements/h3lis200dl/: pyproject.toml
requirements/i2c_expanders/: pyproject.toml
requirements/isl29125/: pyproject.toml
requirements/laser_at/: pyproject.toml
requirements/mc3479/: pyproject.toml
requirements/mcp48xx/: pyproject.toml
requirements/p1am_200_helpers/: pyproject.toml
requirements/rs485_wrapper/: pyproject.toml
requirements/scales/: pyproject.toml
requirements/uboxplot/: pyproject.toml
