[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-at24mac-eeprom"
description = "A CircuitPython library to interface with AT24MAC402 and AT24MAC602 devices."
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Adam Cummick", email = "adamc@facts-eng.com"}
]
urls = {Homepage = "https://github.com/facts-engineering/CircuitPython_AT24MAC_EEPROM"}
keywords = [
    "adafruit",
    "circuitpython",
    "micropython",
    "eeprom",
    "at24mac",
    "at24mac_eeprom"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["at24mac_eeprom"]