# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Dario Cammi
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-axp2101"
description = "Circuitpython driver for AXP2101 power management IC"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Dario Cammi", email = "dcammi@gmail.com"}
]
urls = {Homepage = "https://github.com/CDarius/CircuitPython_AXP2101"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "axp2101",
    "lipo",
    "pmic",
    "ldo",
    "battery",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["axp2101"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
