[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-p1am-200-helpers"
description = "A CircuitPython helper library to interface with the P1AM-200 CPU."
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Adam Cummick", email = "adamc@facts-eng.com"}
]
urls = {Homepage = "https://github.com/facts-engineering/CircuitPython_p1am_200_helpers.git"}
keywords = [
    "adafruit",
    "circuitpython",
    "micropython",
    "p1am",
    "p1am200"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["p1am_200_helpers"]