[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-rs485-wrapper"
description = "A CircuitPython helper library to use RS485 communications."
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Adam Cummick", email = "adamc@facts-eng.com"}
]
urls = {Homepage = "https://github.com/facts-engineering/CircuitPython_rs485_wrapper.git"}
keywords = [
    "adafruit",
    "circuitpython",
    "micropython",
    "p1am",
    "serial",
    "rs485"
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["rs485_wrapper"]